pkgsysconfdir = $(sysconfdir)/powerman

pkgsysconf_DATA = \
	powerman.conf.example \
	apc7900.dev \
	apc7900v3.dev \
	apc7920.dev \
	apc8941.dev \
	apc.dev \
	apc-snmp.dev \
	apcnew.dev \
	apcold.dev \
	apcpdu3.dev \
	apcpdu.dev \
	appro-greenblade.dev \
	appro-gb2.dev \
	bashfun.dev \
	baytech.dev \
	baytech-snmp.dev \
	baytech-rpc18d-nc.dev \
	baytech-rpc22.dev \
	baytech-rpc28-nc.dev \
	baytech-rpc3-nc.dev \
	cb-7050.dev \
	cyclades-pm8.dev \
	cyclades-pm10.dev \
	cyclades-pm20.dev \
	cyclades-pm42.dev \
	dli.dev \
	dli4.dev \
	eaton-revelation-snmp.dev \
	eaton-epdu-blue-switched.dev \
	hp3488.dev \
	hpilo.dev \
	hpmp.dev \
	hpmpblade.dev \
	hpmpcell.dev \
	hpmpdome.dev \
	ibmbladecenter.dev \
	icebox.dev \
	icebox3.dev \
	ics8064.dev \
	ilom.dev \
	lom.dev \
	ipmi.dev \
	ipmipower.dev \
	ipmipower-serial.dev \
	kvm.dev \
	kvm-ssh.dev \
	openbmc.dev \
	redfish-supermicro.dev \
	redfishpower.dev \
	phantom.dev \
	plmpower.dev \
	powerman.dev \
	rancid-cisco-poe.dev \
	raritan-px4316.dev \
	raritan-px5523.dev \
	sentry_cdu.dev \
	swpdu.dev \
	vpc.dev \
	wti.dev \
	wti-rps10.dev

EXTRA_DIST = $(pkgsysconf_DATA)
