AM_CFLAGS = @GCCWARN@

AM_CPPFLAGS = -I$(top_srcdir)/liblsd

noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES = \
	argv.c \
	argv.h \
	debug.c \
	debug.h \
	client_proto.h \
	error.c \
	error.h \
	hprintf.c \
	hprintf.h \
	pluglist.c \
	pluglist.h \
	powerman.h \
	xmalloc.c \
	xmalloc.h \
	xpoll.c \
	xpoll.h \
	xpty.c \
	xpty.h \
	xread.c \
	xread.h \
	xregex.c \
	xregex.h \
	xsignal.c \
	xsignal.h \
	xtime.h \
	xtypes.h
