man1_MANS = powerman.1 pm.1
man3_MANS = libpowerman.3
man5_MANS = powerman.conf.5 powerman.dev.5
man8_MANS = powermand.8 httppower.8 redfishpower.8 plmpower.8

pm.1: powerman.1
	cp powerman.1 $@

CLEANFILES = pm.1

EXTRA_DIST = \
	powerman.1 \
	libpowerman.3 \
	powerman.conf.5 \
	powerman.dev.5 \
	powermand.8 \
	httppower.8 \
	plmpower.8
